--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,31 +1,28 @@
 {
+  "name": "front-end",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 8080",
+    "dev": "next dev --turbopack",
     "build": "next build",
-    "start": "npm run dev"
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@types/react": "18.0.28",
-    "bootstrap": "5.2.3",
-    "classnames": "^2.3.2",
-    "dayjs": "^1.11.7",
-    "i18next": "^23.7.6",
-    "next": "^14.2.6",
-    "next-i18next": "^15.0.0",
-    "react": "^18.3.1",
-    "react-datepicker": "^4.16.0",
-    "react-dom": "^18.3.1",
-    "react-i18next": "^13.4.1",
-    "swr": "^2.2.0",
-    "use-interval": "^1.4.0"
+    "next": "15.1.1",
+    "next-i18next": "^15.4.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
-    "@types/node": "18.15.0",
-    "@types/react-datepicker": "^4.15.0",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.3",
-    "typescript": "4.9.5"
+    "@eslint/eslintrc": "^3",
+    "@types/node": "^20",
+    "@types/react": "^19",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "15.1.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
