--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "classnames": "^2.5.1",
     "next": "15.1.1",
     "next-i18next": "^15.4.1",
     "react": "^19.0.0",
