--- a/back-end/package.json
+++ b/back-end/package.json
@@ -30,6 +30,7 @@
         "dotenv": "^16.0.0",
         "express": "^4.18.0",
         "express-jwt": "^8.4.1",
+        "express-rate-limit": "^7.5.0",
         "helmet": "^7.2.0",
         "jsonwebtoken": "^9.0.0",
         "swagger-jsdoc": "^6.2.8",
