--- a/front-end/package.json
+++ b/front-end/package.json
@@ -6,7 +6,11 @@
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "preinstall": "npx npm-shield",
+    "postinstall": "npm audit",
+    "security-updates": "npx npm-check-updates -u --target semver --doctor",
+    "audit": "npm audit --production"
   },
   "dependencies": {
     "date-fns": "^4.1.0",
@@ -25,5 +29,8 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org/"
   }
 }
